<resources>
    <string name="app_name">Sensor Output Analysis</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="axisX">Axis X</string>
    <string name="axisY">Axis Y</string>
    <string name="axisZ">Axis Z</string>
    <string name="tab_a">Accelerometer</string>
    <string name="tab_g">Gyroscope</string>
    <string name="info_text_a">Accelerometer Output</string>
    <string name="info_text_g">Gyroscope Output</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
